force-app/main/default/objects/ilms__User_Certification_Connector__c/ilms__User_Certification_Connector__c.object-meta.xml
<CustomObject>
    <label>User Certification Connector</label>
    <nameField>
        <displayFormat>CertConnector-{00000}</displayFormat>
        <label>User Certification Connector Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Certification Connectors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>