force-app/main/default/objects/ilms__User_Certification_Connector__c/fields/ilms__Course_Status__c.field-meta.xml
<CustomField>
    <fullName>ilms__Course_Status__c</fullName>
    <formula>TEXT( ilms__User_Book__r.ilms__Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Course Status</label>
    <type>Text</type>
</CustomField>