force-app/main/default/objects/ilms__User_Certification_Connector__c/fields/ilms__Percentage_Complete__c.field-meta.xml
<CustomField>
    <fullName>ilms__Percentage_Complete__c</fullName>
    <formula>ilms__User_Book__r.ilms__Completed_Percentage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Percentage Complete</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>