force-app/main/default/objects/ilms__User_Certification_Connector__c/fields/ilms__User_Book__c.field-meta.xml
<CustomField>
    <fullName>ilms__User_Book__c</fullName>
    <label>User Book</label>
    <referenceTo>ilms__User_Book__c</referenceTo>
    <relationshipName>User_Cert_Connectors</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>