force-app/main/default/objects/ilms__User_Certification_Connector__c/fields/ilms__User_Certification__c.field-meta.xml
<CustomField>
    <fullName>ilms__User_Certification__c</fullName>
    <label>User Certification</label>
    <referenceTo>ilms__User_Certification__c</referenceTo>
    <relationshipName>User_Cert_Connectors</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>